<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewSifods"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toStartOf="@+id/viewPeruEduca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/img_sifods" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sifods"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPeruEduca"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewSifods"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/img_peruEduca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perueduca"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewSisdore"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="18dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="18dp"
        app:layout_constraintEnd_toStartOf="@+id/viewAyni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSifods">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/img_peruEduca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sisdore"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewAyni"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="18dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="18dp"
        app:layout_constraintStart_toEndOf="@+id/viewSisdore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSifods">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/img_peruEduca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayni"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/link"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="642dp" />

    <Button
        android:id="@+id/btnDescarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="620dp" />


</androidx.constraintlayout.widget.ConstraintLayout>